# copier-python-template

./: copier.json  copier.yml
template/{{project_slug}}/: .dir-locals.el  .envrc  .gitignore  .mypy.ini  .ruff.toml  README.md  mkdocs.yml  pyproject.toml  pyrightconfig.json
template/{{project_slug}}/.github/workflows/: ci.yml  publish-docs.yml
template/{{project_slug}}/docs/: index.md  tests.md
template/{{project_slug}}/docs/reference/: {{package_name}}.md
template/{{project_slug}}/src/{{package_name}}/: cli.py  generate.py  settings.py
template/{{project_slug}}/tests/: test_basic.py
